Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8252379 | 8u281 | Bhawesh Choudhary | P4 | Resolved | Fixed | b01 |
JDK-8256957 | jfx11.0.10 | Kevin Rushforth | P4 | Resolved | Fixed |
When applying border radius to an element in a JavaFX WebView, as long as all four corners have the same radius, it works fine. But if the four corners have different radii they start to affect each other, so a value of 0 in the top right corner would cause a specified value of 32px in the top left corner to shrink.
- backported by
-
JDK-8252379 JavaFX WebView does not calculate border-radius properly
- Resolved
-
JDK-8256957 JavaFX WebView does not calculate border-radius properly
- Resolved
- duplicates
-
JDK-8164861 WebView incorrecly displays search input corners on Walmart.com
- Closed
- is blocked by
-
JDK-8092416 Optimize non-uniform round rect rendering in Regions
- Open
(1 links to)