8181775: JavaFX WebView does not calculate border-radius properly

Reviewed-by: kcr, ajoseph